# YAMS

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build_tests.yml  publish.yml  smoke_tests.yml  unit_tests.yml
backend/: .gitignore  README.md  setup.sql  setup.surql
backend/scripts/: install.sh  setup.sh  start.sh
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.js  yamsconfig.json
frontend/src/: App.tsx  index.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: config.rs  database.rs  main.rs
frontend/src/components/: ClientItem.tsx  ClientRegisterEditingForm.tsx  ClientRegisterForm.tsx  CountryItem.tsx  DialogOverlay.tsx  HomeTile.tsx  LandItem.tsx  Modals.tsx  NotificationComponent.tsx  Notifications.tsx  ProductItem.tsx  SubmenuLayout.tsx
frontend/src/config/: config.json  frontendConfig.ts  index.ts
frontend/src/libs/: autoStore.tsx  database.ts  dbConnection.ts  dialog.ts  notification.ts
frontend/src/model/: Address.ts  Product.ts  ProductType.ts  address.ts  animal.ts  city.ts  client  client.ts  clientfile.ts  country.ts  event.ts  land.ts  participation.ts  product.ts  productType.ts  purchase.ts  race.ts  relation.ts  seminar.ts  treatment.ts  treatmentAppointment.ts  treatment_appointment.ts  treatment_type.ts
frontend/src/pages/: _app.tsx  _layout.tsx  index.tsx
resources/: Energetik_Sabine_Rechnungsvorlage.xlsx
resources/documentation/: Umsetzung(GrpA1).docx
resources/logos/: yams.icns
(+162 files in other folders)
