[package]
name = "yams"
version = "0.1.0"
description = "A management software for patients and animals"
authors = ["Tim Peko", "David Rathmair", "Dominik Wernsdorfer", "Julian Bachinger", "David Edthaler", "Daniel Ferihumer"]
license-file = "../../LICENSE"
repository = "https://github.com/HTBLA-Grieskirchen/YAMS/"
default-run = "yams"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
surrealdb = "^1.0.0-beta.8"
directories = "^4.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true
